# internal/handlers/chat/message.handler.go
@@ -1,11 +1,13 @@
 package chat
 
 import (
+	"github.com/duke-git/lancet/v2/maputil"
 	"github.com/fcraft/open-chat/internal/constants"
 	"github.com/fcraft/open-chat/internal/entity"
 	"github.com/fcraft/open-chat/internal/schema"
 	"github.com/fcraft/open-chat/internal/utils/ctx_utils"
 	"github.com/gin-gonic/gin"
+	"gorm.io/datatypes"
 )
 
 // GetMessages
@@ -48,4 +50,52 @@ func (h *Handler) GetMessages(c *gin.Context) {
 			NextPage: nextPage,
 		},
 	)
+}
+
+// UpdateMessage
+//
+//	@Summary		更新消息
+//	@Description	更新消息
+//	@Tags			Message
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string									true	"消息 ID"
+//	@Param			req	body		schema.Message							true	"更新的消息数据"
+//	@Success		200	{object}	entity.CommonResponse[schema.Message]	"返回数据"
+//	@Router			/chat/message/{id}/update [post]
+func (h *Handler) UpdateMessage(c *gin.Context) {
+	var uri PathParamId
+	if err := c.BindUri(&uri); err != nil || uri.ID == 0 {
+		ctx_utils.HttpError(c, constants.ErrBadRequest)
+		return
+	}
+	var req schema.Message
+	if err := c.ShouldBindJSON(&req); err != nil {
+		ctx_utils.HttpError(c, constants.ErrBadRequest)
+		return
+	}
+
+	// 查消息
+	message := schema.Message{
+		ID: uri.ID,
+	}
+	if err := h.Db.Find(&message).Error; err != nil {
+		ctx_utils.HttpError(c, constants.ErrBadRequest)
+	}
+
+	// 验证用户对会话的所有权
+	if !h.Helper.CheckUserSession(ctx_utils.GetUserId(c), message.SessionID) {
+		ctx_utils.CustomError(c, 400, "no permission")
+		return
+	}
+
+	updateMessage := schema.Message{
+		Extra: datatypes.NewJSONType(maputil.Merge(message.Extra.Data(), req.Extra.Data())),
+	}
+	if err := h.Db.Model(&message).Updates(&updateMessage).Error; err != nil {
+		ctx_utils.HttpError(c, constants.ErrInternal)
+		return
+	}
+
+	ctx_utils.Success(c, true)
 }
