# internal/handlers/course/exam.handler.go
@@ -67,3 +67,54 @@ func (h *Handler) CreateExam(c *gin.Context) {
 
 	ctx_utils.Success(c, req)
 }
+
+// RandomExam 随机测验
+//
+//	@Summary		随机测验
+//	@Description	随机测验
+//	@Tags			Exam
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	entity.CommonResponse[schema.Exam]	"返回数据"
+//	@Router			/tue/exam/random [post]
+func (h *Handler) RandomExam(c *gin.Context) {
+	var problems []schema.Problem
+
+	// 1. 查询随机题目
+	if err := h.Db.Order("RANDOM()").Limit(20).Find(&problems).Error; err != nil {
+		ctx_utils.HttpError(c, constants.ErrInternal)
+		return
+	}
+
+	// 2. 生成测验
+	var examProblems []schema.ExamProblem
+	for _, problem := range problems {
+		examProblems = append(
+			examProblems, schema.ExamProblem{
+				ProblemID: problem.ID,
+				Score:     100,
+			},
+		)
+	}
+	req := schema.Exam{
+		Name:        "智能测验",
+		Description: "智能测验",
+		LimitTime:   0,
+		Problems:    examProblems,
+		TotalScore:  uint64(len(examProblems) * 100),
+		Subjects:    "",
+	}
+	if err := gorm_utils.Save(h.Store.Db, &req); err != nil {
+		ctx_utils.HttpError(c, constants.ErrInternal)
+		return
+	}
+
+	// 3. 重新查询结果
+	exam, err := h.Store.GetExamWithDetails(req.ID)
+	if err != nil {
+		ctx_utils.HttpError(c, constants.ErrInternal)
+		return
+	}
+
+	ctx_utils.Success(c, exam)
+}
